# remarkpush

./: .gitignore  .rmpushignore  CLAUDE.md  README.md  pyproject.toml
.docs_claude/plans/completed/: 2026-06-git-local-history-layer.md  2026-06-phases-0-2-ssh-push-pull.md
src/remarkpush/: __init__.py  cli.py  config.py  device.py  history.py  ignore.py  index.py  metadata.py  reading_list.py
src/remarkpush/transport/: __init__.py  ssh.py  usb.py
tests/: test_device.py  test_history.py  test_reading_list.py  test_sync_annotations.py
